# n-link

./: README.md  package.json
.github/workflows/: ci.yml
desktop/: index.html  package.json  vite.config.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: cli.rs  cmd.rs  main.rs
desktop/src/components/: devices.ts
desktop/src/views/: Home.vue
n-link-core/: package.json
