[package]
name = "n-link"
version = "0.1.6"
description = "Free, cross-platform, CX-II compatible computer linking program for the TI-Nspire"
authors = [ "Ben Schattinger <developer@lights0123.com>" ]
license = "GPL-3.0"
repository = "https://github.com/lights0123/n-link"
default-run = "n-link"
edition = "2018"
build = "src/build.rs"

[dependencies]
anyhow = "1.0.99"
serde_json = "1.0.143"
libnspire = { path="../../../libnspire-rs/libnspire" }
lazy_static = "1.5.0"
rusb = "0.9.4"
serde = { version = "1.0.219", features = [ "derive" ] }
tauri = { version = "2.8.4", features = [] }
clap = { version = "4.5.46", features = [ "derive" ] }
indicatif = "0.18"
libusb1-sys = { version = "0.7.0", features = [ "vendored" ] }
hashbrown = "0.15.5"
tauri-plugin-dialog = "2.3.3"

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
default = [ "custom-protocol" ]

[[bin]]
name = "n-link"
path = "src/main.rs"
